--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,52 +9,49 @@
 </head>
   <body>
       <div class="row">
-        <div class="col-sm-4 left center">
-          <br>
-          <div class="center-notice grey">
-              <%= flash[:notice] %>
+        <div class="col-sm-3 left center">
+
+          <div class="logo header-box">
+            <%#= link_to image_tag("logo.png", :class => "logo img-responsive logo-center"), people_path %>
+            <%= link_to 'Momentum', people_path %>
           </div>
-          <br>
+          <div class="center-notice grey"><%= flash[:notice] %></div>
 
-          <div class="home">
-            <%= link_to image_tag("logo.png", :class => "logo img-responsive logo-center"), people_path %>
-                  <%#= link_to 'Joshua Rinard', projects_path %>
-          </div>
-          <br>
+          <nav class="nav">
+            <li><%= link_to "Home", root_path, :class => 'notWorking' %></li>
+            <li><%= link_to "People", root_path, :class => 'notWorking' %></li>
 
-          <h4>Web Developer</h4>
-          <h4>Graphic Design</h4>
-          <br>
-          <h2>TECH SKILLS</h2>
-          <%= image_tag("icon1.png", :class => "icon-size")%>
-          <h5>HTML5 / CSS3</h5>
+            <li><%= link_to "Serve", root_path, :class => 'notWorking' %></li>
 
-          <h2>DESIGN SKILLS</h2>
-          <%= image_tag("icon2.png", :class => "icon-size")%>
-          <h5>Front-end Design</h5>
-          <h5>User Interface</h5>
-          <br>
-          <br>
+            <li><%= link_to "Stats", root_path, :class => 'notWorking' %></li>
 
-          <div class="contact-info">
-            <%= image_tag("icon6.png", :class => "icon-size")%><br>
-            <div class="h2-black">208-316-8338</div>
-            <div class="h4-black">jrinard2@gmail.com</div><br>
+            <hr>
+            <li><%= link_to "Departments", root_path, :class => 'notWorking' %></li>
+            <li><%= link_to "Events", root_path, :class => 'notWorking' %></li>
 
-            <a href="https://www.linkedin.com/in/jrinard/" target="_blank"><%= image_tag("icon-lin.png", :class => "icon-size")%></a>
-            <a href="http://www.joshrinardart.com/" target="_blank"><%= image_tag("icon-inst.png", :class => "icon-size")%></a>
-            <a href="https://github.com/jrinard" target="_blank"><%= image_tag("icon-git.png", :class => "icon-size")%></a>
-            <br>
-          </div>
+            <h5>Attendance Entry</h5>
+            <h5>Groups</h5>
+            <h5>Files</h5>
+            <h5>Give</h5>
+            <h5>Forms</h5>
+            <h5>Mail Merges</h5>
+            <h5>Messages</h5>
+            <h5>Needs/Announcements</h5>
+            <h5>Report Bug</h5>
+
+            <%#= image_tag("icon1.png", :class => "icon-size")%>
+
+
           <br>
           <% if current_user %>
+              <li><%= link_to current_user.email, edit_user_registration_path %><li>
               <li><%= link_to "Log-out", destroy_user_session_path, method: "delete" %></li>
           <% else %>
               <li><%= link_to "Admin", new_user_session_path %></a></li>
           <% end %>
         </div> <!-- Left end -->
 
-        <div class="col-sm-8 right">
+        <div class="col-sm-9 right">
           <div class="content">
              <%= yield %>
           </div>
@@ -73,5 +70,7 @@
      <% end %>
    </div> <!-- login end -->
    <% end %>
+
+   </nav>
   </body>
 </html>
