refined home container

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,10 @@
-<div class="h2-black pull-left">Home</div>
+<div class="flex-container-big">
+  <div class="flex-block-big">
+
+      <div class="h2-white pull-left">Welcome</div>
 
 
-<h5>Movement</h5>
+<h5>Build area for adding family data on people page</h5>
+
+  </div><!-- flex-block end -->
+</div><!-- flex-container end -->
