--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -485,7 +485,7 @@ input[type="image"]
 
 .solid {
   font-weight: bold;
-  color: #bd3e9e;
+  color: #feaf21;
   font-size: 1.1em;
 }
 .admin-title {
