--- a/app/views/parts/edit.html.erb
+++ b/app/views/parts/edit.html.erb
@@ -1,8 +1,10 @@
-<div class="col-xs-12">
-  <div class="flex-container">
-    <div class="flex-block">
-  <h3>Edit Person</h3>
+
+
+    <div>Part - Person - Backup Edit</div><br><br>
+
+    <h4 class="pull-left">First and Last Name must be filled in.</h4>
+    <br>
+    <br>
     <%= render "form" %>
     </div>
   </div>
-</div>
