Units - Families  create, edit, delete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
           <nav class="nav">
             <li><%= link_to "Home", root_path, :class => 'notWorking' %></li>
-            <li><%= link_to "People", parts_path, :class => 'notWorking' %></li>
+            <li><%= link_to "People", units_path, :class => 'notWorking' %></li>
 
             <li><%= link_to "Serve", root_path, :class => 'notWorking' %></li>
 
