--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -12,5 +12,38 @@
     <%= render "form" %>
 
 
+    <!-- PEOPLE -->
+    <div class="well">
+      <span class="h4-dark">People</span>
+      <div class="pull-right">
+        <%= link_to "Add Person", new_unit_part_path(@unit), :class => "btn-sm btn-warning pull-right" %>
+      </div>
+
+        <% if @unit.parts.any? %>
+
+          <% @unit.parts.each do |part| %>
+          <div class="flex-container-events">
+            <div class="flex-block-events">
+              <div class="btn event-text">
+                <%= part.firstName %> <%= part.lastName %>
+                <%#= link_to part.firstName, unit_part_path(@unit, part.id), :class => "btn-lg" %>
+              </div><!-- event end -->
+              <div class="blue btn">
+                <%= link_to "Edit", edit_unit_part_path(@unit, part.id), :class => "btn" %> <br>
+              </div><!-- blue end -->
+              <div class="pink btn">
+                <%= link_to "Remove", unit_part_path(@unit, part), :class => "btn", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
+              </div><br><!-- pink end -->
+            </div><!-- flexbox-events  end -->
+          </div><!-- flex-events container  end -->
+          <hr>
+          <% end %>
+          <% else %><br><br>
+          <p> No People in this family yet</p>
+        <% end %>
+    </div>
+
+
+
   </div><!-- flex-block end -->
 </div><!-- flex-container end -->
