--- a/app/views/parts/edit.html.erb
+++ b/app/views/parts/edit.html.erb
@@ -1,6 +1,6 @@
 
 
-    <div>Part - Person - Backup Edit</div><br><br>
+    <div class="h2-white pull-left">Part - Person - Edit</div><br><br>
 
     <h4 class="pull-left">First and Last Name must be filled in.</h4>
     <br>
