--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -597,6 +597,12 @@ input[type="image"]
 .people-text {
   color: #d2d2d2;
 }
+.family-card {
+  width: 200px;
+  background-color: #fff;
+  padding: 10px;
+  margin: 5px;
+}
 
 
 
