--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,5 +6,16 @@
 
 <h5>Build area for adding family data on people page</h5>
 
+
+<h3>Search</h3>
+  <div class="well center">
+    <%= form_tag(show_path, method: 'post', class:'') do %>
+      <%= text_field_tag :familyName, "", class: "form-control", placeholder: "Search by Family Name" %><br>
+      <button type="submit" class=" btn-lg btn-primary">Search</button>
+    <% end %>
+  </div>
+
+
+
   </div><!-- flex-block end -->
 </div><!-- flex-container end -->
