Search expermentation - Still not working

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,9 +4,7 @@
       <div class="h2-white pull-left">Welcome</div>
 
 
-<h5>Build area for adding family data on people page</h5>
-
-
+<!-- Not Currently Working -->
 <h3>Search</h3>
   <div class="well center">
     <%= form_tag(show_path, method: 'post', class:'') do %>
@@ -14,7 +12,6 @@
       <button type="submit" class=" btn-lg btn-primary">Search</button>
     <% end %>
   </div>
-
 
 
   </div><!-- flex-block end -->
