--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,8 @@
 <h2>Sign up</h2>
 
+<div class="well">
+
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -27,3 +30,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
